# scBaseCount_Pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb  test.json
cluster_validation/: __init__.py  config.py  pipeline.py  preprocess.py  viz.py
cluster_validation_sandbox/: README.md  clust_val_analysis.ipynb  report.md
cytetype_runs/: cytetype_sandbox.ipynb
docs/report/: references.bib
docs/resources/: Project_Plan.tex
ena_context/: README.md  __init__.py  __main__.py  contexts_inspection.ipynb  ena_client.py  fetch.py  models.py  pipeline.py
exploratory_analysis/: exploratory_analysis.ipynb
metadata_analysis/: scbasecount_homo_sapiens_metadata.ipynb  scbasecount_homo_sapiens_metadata_summary.txt
metadata_analysis/v1/: scbasecount_homo_sapiens_metadata.ipynb
metadata_analysis/v2_lung/: README.md  analysis.ipynb  metadata_analysis.ipynb  quantiles_datasets.csv  report.md  scbasecount_metadata
notebooks/: README.md  clustering.ipynb  cyteonto.ipynb  cytetype.ipynb  metadata.ipynb  study_context.ipynb
output/: contexts.jsonl  datasets_with_study_description.csv
output/context/: contexts.jsonl
output/metadata/: datasets.csv  quantiles_datasets.csv
scripts/: README.md
scripts/cluster_validation/: README.md  __init__.py  clustering.py  data.py  embedding.py  merge.py  metrics.py  models.py  pipeline.py  resolution.py  viz.py
scripts/cyteonto/: __init__.py  client.py  config.py  payload.py  (+2 more)
srx_abstracts/: __init__.py  __main__.py  entrez_client.py  models.py  pipeline.py  pubmed_fetch.py  resolve.py
(+25 files in other folders)
