[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["srx_abstracts", "ena_context"]

[project]
name = "scbasecount-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "httpx>=0.28.0",
    "ipykernel>=7.2.0",
    "kneed>=0.8.6",
    "matplotlib>=3.10.8",
    "pydantic>=2.10.0",
    "pyarrow>=23.0.1",
    "scanpy[leiden]>=1.12",
]
