[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/study_context", "scripts/cluster_validation", "scripts/metadata", "scripts/cyteonto"]

[project]
name = "scbasecount-pipeline"
version = "0.1.0"
description = "My 30 hp masters project for Lund University Bioinformatics MSc at Nygen Analytics"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "httpx>=0.28.0",
    "ipykernel>=7.2.0",
    "kneed>=0.8.6",
    "matplotlib>=3.10.8",
    "pydantic>=2.10.0",
    "pyarrow>=23.0.1",
    "scanpy[leiden]>=1.12",
    "python-dotenv>=1.2.2",
    "cytetype>=0.19.4",
    "umap-learn==0.5.11",  # pin: minor updates change embedding layout
]
